// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video label with a title 1`] = `
<style>
{
  "IS1": {
    "color": "rgba(0,131,71,1)",
  },
  "S1": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "padding-bottom": "3px",
    "position": "relative",
  },
  "S2": {
    "font-family": "GillSansMTStd-Medium",
    "font-size": "12px",
    "font-weight": "400",
    "letter-spacing": "1.2px",
    "line-height": "11px",
    "margin-bottom": "0px",
    "margin-left": "5px",
    "padding-bottom": "0px",
    "position": "relative",
    "top": "2px",
  },
  "S3": {
    "-ms-flex-align": "center",
    "-ms-flex-direction": "row",
    "-webkit-align-items": "center",
    "-webkit-box-align": "center",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "align-items": "center",
    "flex-direction": "row",
    "margin-bottom": "3px",
    "margin-left": "0px",
    "padding-bottom": "0px",
    "position": "relative",
  },
}
</style>

<div
  className="S3"
>
  <div
    className="S1"
  >
    <svg
      height={8}
      viewBox="0.15463916957378387 0.049614034593105316 23.59917640686035 13.728596687316895"
      width={13.76}
    >
      <rect
        fill="#008347"
        height="13.5721404"
        width="15.4550103"
        x="0.154639175"
        y="0.139754386"
      />
      <polygon
        fill="#008347"
        points="16.3405361 4.14989474 16.3405361 9.66442105 22.0216082 12.8146667 22.0216082 0.999894737"
      />
      <polygon
        fill="#008347"
        points="23.7538144 0.0496140351 22.7616495 0.643508772 22.7616495 13.1902105 23.7538144 13.7782105"
      />
    </svg>
  </div>
  <div
    className="IS1 S2"
  >
    SWIMMING
  </div>
</div>
`;

exports[`2. video label without a title shows video 1`] = `
<style>
{
  "IS1": {
    "color": "rgba(0,131,71,1)",
  },
  "S1": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "padding-bottom": "3px",
    "position": "relative",
  },
  "S2": {
    "font-family": "GillSansMTStd-Medium",
    "font-size": "12px",
    "font-weight": "400",
    "letter-spacing": "1.2px",
    "line-height": "11px",
    "margin-bottom": "0px",
    "margin-left": "5px",
    "padding-bottom": "0px",
    "position": "relative",
    "top": "2px",
  },
  "S3": {
    "-ms-flex-align": "center",
    "-ms-flex-direction": "row",
    "-webkit-align-items": "center",
    "-webkit-box-align": "center",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "align-items": "center",
    "flex-direction": "row",
    "margin-bottom": "3px",
    "margin-left": "0px",
    "padding-bottom": "0px",
    "position": "relative",
  },
}
</style>

<div
  className="S3"
>
  <div
    className="S1"
  >
    <svg
      height={8}
      viewBox="0.15463916957378387 0.049614034593105316 23.59917640686035 13.728596687316895"
      width={13.76}
    >
      <rect
        fill="#008347"
        height="13.5721404"
        width="15.4550103"
        x="0.154639175"
        y="0.139754386"
      />
      <polygon
        fill="#008347"
        points="16.3405361 4.14989474 16.3405361 9.66442105 22.0216082 12.8146667 22.0216082 0.999894737"
      />
      <polygon
        fill="#008347"
        points="23.7538144 0.0496140351 22.7616495 0.643508772 22.7616495 13.1902105 23.7538144 13.7782105"
      />
    </svg>
  </div>
  <div
    className="IS1 S2"
  >
    VIDEO
  </div>
</div>
`;

exports[`3. video label with the black default colour 1`] = `
<style>
{
  "IS1": {
    "color": "black",
  },
  "S1": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "padding-bottom": "3px",
    "position": "relative",
  },
  "S2": {
    "font-family": "GillSansMTStd-Medium",
    "font-size": "12px",
    "font-weight": "400",
    "letter-spacing": "1.2px",
    "line-height": "11px",
    "margin-bottom": "0px",
    "margin-left": "5px",
    "padding-bottom": "0px",
    "position": "relative",
    "top": "2px",
  },
  "S3": {
    "-ms-flex-align": "center",
    "-ms-flex-direction": "row",
    "-webkit-align-items": "center",
    "-webkit-box-align": "center",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "align-items": "center",
    "flex-direction": "row",
    "margin-bottom": "3px",
    "margin-left": "0px",
    "padding-bottom": "0px",
    "position": "relative",
  },
}
</style>

<div
  className="S3"
>
  <div
    className="S1"
  >
    <svg
      height={8}
      viewBox="0.15463916957378387 0.049614034593105316 23.59917640686035 13.728596687316895"
      width={13.76}
    >
      <rect
        fill="black"
        height="13.5721404"
        width="15.4550103"
        x="0.154639175"
        y="0.139754386"
      />
      <polygon
        fill="black"
        points="16.3405361 4.14989474 16.3405361 9.66442105 22.0216082 12.8146667 22.0216082 0.999894737"
      />
      <polygon
        fill="black"
        points="23.7538144 0.0496140351 22.7616495 0.643508772 22.7616495 13.1902105 23.7538144 13.7782105"
      />
    </svg>
  </div>
  <div
    className="IS1 S2"
  >
    VIDEO
  </div>
</div>
`;
